--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: cursive;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --main-color: rgba(74, 255, 58, 0.5);
 }
 
@@ -32,7 +32,7 @@
     display: block;
     white-space: nowrap;
     border-right: 4px solid;
-    width: 17ch;
+    width: 18ch;
     color: var(--main-color);
     font-size: 25px;
     animation: typing 2s steps(20), blink .5s infinite step-end alternate;
